--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>ONS个人整理合集</title>
 <script>
-    var Title = document.getElementsByTagName('title')[0]
+    var Title = document.getElementsByTagName('ONS个人整理合集')[0]
     console.log(Title)  // <title>ONS个人整理合集</title>
 </script>
 <audio autoplay="true" loop="true"> <source src="https://onedrive.gimhoy.com/sharepoint/aHR0cHM6Ly9uYXMxeHllc2FjbnotbXkuc2hhcmVwb2ludC5jb20vOnU6L2cvcGVyc29uYWwvbHphMTc2MjE5NV9uYXMyeF9jb20vRVJiOVdZaklZeGxDbVdRbmRUb21LWU1Cc2J2ZERXanVGWUFPMENzSEpxV01rdz9lPW1tdTRWVw==.mp3"></audio>
