--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@ fieldset{
 <h2><font color ="#00FF00" ><details class="menu" close>
       <summary>【表格&CHM目录】</summary>
        <font color="white">
-  <ul><div class="chs"><li> ONS模拟器资源整理表v2.0（2020.01.23修订）</div> </li>
+  <ul><div class="chs"><li> ONS模拟器资源整理表v2.0&【CHM目录】ONS模拟器资源整理表v2.0（2020.01.23修订）提取码: ucfn 解压码：ons安卓吧</div> </li>
   
-  <div class="b"><a href="https://pan.baidu.com/s/14UbTxMMPj0rF2mG5HSQMUA"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
+  <div class="b"><a href="https://pan.baidu.com/s/1qJ0akK_M4ktaC-gtWEpSrQ"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
   
-    <ul><div class="chs"><li> 【CHM目录】ONS模拟器资源整理表v2.0 （2020.01.23更新）</div> </li>
+    <ul><div class="chs"><li> 模拟器下载</div> </li>
   
-  <div class="b"><a href="https://pan.baidu.com/s/14UbTxMMPj0rF2mG5HSQMUA"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
+  <div class="b"><a href="https://github.com/butter255/onsgame">模拟器</font></a></div></ul></ul></ul>
       
    
     
