--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ fieldset{
   <div class="b"><a href="https://pan.baidu.com/s/1qJ0akK_M4ktaC-gtWEpSrQ"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
   
     <ul><div class="chs"><li> 模拟器下载</div> </li>
-  
-  <div class="b"><a href="https://github.com/butter255/onsgame">模拟器</font></a></div></ul></ul></ul>
+ 
+   <A href="https://github.com/butter255/onsgame"><FONT color=pink size=6><P align="left">模拟器</P></FONT></A>  
       
    
     
