--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ fieldset{
 <h2><font color ="#00FF00" ><details class="menu" close>
       <summary>【表格&CHM目录】</summary>
        <font color="white">
-  <ul><div class="chs"><li> ONS模拟器资源整理表v2.0&【CHM目录】ONS模拟器资源整理表v2.0（2020.01.23修订）提取码: ucfn 解压码：ons安卓吧</div> </li>
+  <ul><div class="chs"><li> ONS模拟器资源整理表v2.0&【CHM】ONS模拟器资源目录（2020.01.23修订）提取码: ucfn 解压码：ons安卓吧</div> </li>
   
   <div class="b"><a href="https://pan.baidu.com/s/1qJ0akK_M4ktaC-gtWEpSrQ"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
   
