--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ fieldset{
 <font size="6"  color="GhostWhite">
 一、资源详情请见ONS资源整理列表</span></a><br>
 一、通用解压码为 ons安卓吧    （注意是小写）</span></a><br>
-二、默认使用ONScripter-Jh打开，限定MINE模拟器的会注明（游戏脚本加密nt2或nt3）生肉部分乱码用MINE，版本选择改为onscripter-jp  具体问题见目录</span></a><br>
+二、默认使用ONScripter-Jh打开，限定MINE模拟器的会注明（游戏脚本加密nt2或nt3）生肉部分乱码ONScripter-Jh勾选SJIS，或在MINE中版本选择为onscripter-jp  具体问题见目录</span></a><br>
 三、当前页面游戏更新时间为：<span style="color:Red">2020年3月22日</span>（若页面没有更新，请删除浏览器缓存重新进入）。
 </fieldset>
 
