--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ fieldset{
 
 <fieldset>
 <font size="6"  color="GhostWhite">
-由于更新暂时取消除表格外的所有资源链接，恢复期待定
+由于更新暂时取消除表格外的所有资源链接，恢复期待定</span></a><br>
 一、资源详情请见ONS资源整理列表</span></a><br>
 一、通用解压码为 ons安卓吧    （注意是小写）</span></a><br>
 二、默认使用ONScripter-Jh打开，限定MINE模拟器的会注明（游戏脚本加密nt2或nt3）生肉部分乱码ONScripter-Jh勾选SJIS，或在MINE中版本选择为onscripter-jp  具体问题见目录</span></a><br>
