--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ MARGIN-LEFT: auto;
 </html>
 <h1>
 <div style="background-color: LightPink; width: 100%; height: 55;" ><font size="6.5"  color= Snow >
-<div style="text-align:center;line-height:55px" >★ ★ ★ ONS游戏-个人整理合集 ★ ★ ★</div>
+<div style="text-align:center;line-height:55px" >★ ★ ★ ONS资源库-个人整理合集 ★ ★ ★</div>
 <br>
 
 
@@ -129,8 +129,8 @@ fieldset{
 <h2><font color ="#00FF00" ><details class="menu" close>
       <summary>【模拟器下载】</summary>
        <font color="white">
- <A href="https://github.com/butter255/onsgame"><FONT color=pink size=6><P align="left">ONScripter-Jh（全平台）</P></FONT></A>
-<A href="https://github.com/butter255/onsgame"><FONT color=pink size=6><P align="left">MINE(面包工坊）</P></FONT></A>  
+ <A href="https://bitbucket.org/jh10001/onscripter-jh/downloads/"><FONT color=pink size=6><P align="left">ONScripter-Jh（全平台）</P></FONT></A>
+<A href="https://tieba.baidu.com/p/6476350812"><FONT color=pink size=6><P align="left">MINE(面包工坊）</P></FONT></A>  
 	       
 	       
 	            </ul>
