--- a/index.html
+++ b/index.html
@@ -111,14 +111,15 @@ fieldset{
 <h2><font color ="#00FF00" ><details class="menu" close>
       <summary>【表格&CHM目录】</summary>
        <font color="white">
-  <ul><div class="chs"><li> ONS模拟器资源整理表v3.0（2020.04.13）&【CHM】ONS模拟器资源目录（2020.01.23修订）提取码：ty73 解压码：30w包移植_05</div> </li>
-  
+  <ul><div class="chs"><li> ONS模拟器资源整理表v3.0（2020.04.13）&【CHM】ONS模拟器资源目录（2020.01.23）</font></a></div></ul></ul></ul>
+提取码：ty73 解压码：30w包移植_05</div> </li>
+   <div class="b"><a href="https://pan.baidu.com/s/1iupXvxig2_7IxEY1GmZPrg"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
 
      </ul>
 </details></font></h2>
 
 <!-- 模拟器下载 -->
-<h2><font color ="#00FF00" ><details class="menu" close>
+<h2><font color ="#000000" ><details class="menu" close>
       <summary>【模拟器下载】</summary>
        <font color="white">
  <A href="https://bitbucket.org/jh10001/onscripter-jh/downloads/"><FONT color=white size=6><P align="left">ONScripter-Jh（全平台）</P></FONT></A>
