--- a/index.html
+++ b/index.html
@@ -1,27 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@butter255 
-Learn Git and GitHub without any code!
-Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
-
-
-butter255
-/
-onsgame
-1
-31
- Code Issues 0 Pull requests 0 Actions Projects 0 Wiki Security Insights Settings
-onsgame/index.html
-@butter255 butter255 Update index.html
-bf4636e 6 days ago
-918 lines (633 sloc)  55.8 KB
-  
 <title>ONS个人整理合集</title>
 <script>
     var Title = document.getElementsByTagName('ONS个人整理合集')[0]
@@ -87,9 +63,9 @@ fieldset{
 由于更新暂时取消除表格外的所有资源链接，恢复期待定</span></a><br>
 <font size="6"  color="GhostWhite">
 一、资源详情请见ONS资源整理列表</span></a><br>
-一、通用解压码为 ons安卓吧    （注意是小写）</span></a><br>
-二、默认使用ONScripter-Jh打开，限定MINE模拟器的会注明（游戏脚本加密nt2或nt3）生肉部分乱码ONScripter-Jh勾选SJIS，或在MINE中版本选择为onscripter-jp  具体问题见目录</span></a><br>
-三、当前页面游戏更新时间为：<span style="color:Red">2020年3月22日</span>（若页面没有更新，请删除浏览器缓存重新进入）。
+二、新通用解压码：30w包移植_05 </span></a><br>
+三、默认使用ONScripter-Jh打开，限定MINE模拟器的会注明（游戏脚本加密nt2或nt3）生肉部分乱码ONScripter-Jh勾选SJIS，或在MINE中版本选择为onscripter-jp  具体问题见目录</span></a><br>
+四、当前页面更新时间为：<span style="color:Red">2020年4月13日</span>（若页面没有更新，请删除浏览器缓存重新进入）。
 </fieldset>
 
 <!-- 圆框 -->
@@ -135,17 +111,12 @@ fieldset{
 <h2><font color ="#00FF00" ><details class="menu" close>
       <summary>【表格&CHM目录】</summary>
        <font color="white">
-  <ul><div class="chs"><li> ONS模拟器资源整理表v2.0&【CHM】ONS模拟器资源目录（2020.01.23修订）提取码:3vmn 解压码：ons安卓吧</div> </li>
+  <ul><div class="chs"><li> ONS模拟器资源整理表v3.0（2020.04.13）&【CHM】ONS模拟器资源目录（2020.01.23）提取码:ty73 解压码：30w包移植_05
+</div> </li>
   
-  <div class="b"><a href="https://pan.baidu.com/s/143VBvAHhNR3LeZzHp9pz0Q"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
+  <div class="b"><a href="https://pan.baidu.com/s/1iupXvxig2_7IxEY1GmZPrg"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
   
-    <ul><div class="chs"><li> 模拟器下载</div> </li>
  
-   <A href="https://github.com/butter255/onsgame"><FONT color=pink size=6><P align="left">模拟器</P></FONT></A>  
-	
-  <ul><div class="chs"><li>梦妖☆尤娜的奉仕课程～ 提取码: 25vy</div> </li>
-    <div class="b"><a href="https://pan.baidu.com/s/1UqpFKVI_XPs6oxYMVa71EA"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
-        
    
     
      </ul>
@@ -153,7 +124,18 @@ fieldset{
 
 <!-- 表格&CHM目录 -->
 
+<!-- 模拟器下载-->
+<h2><font color ="black" ><details class="menu" close>
+      <summary>【模拟器下载】</summary>
+       <font color="white">
 
+
+
+
+
+</details></font></h2>
+
+<!-- 模拟器下载-->
 
 <h2><font color ="red" ><details class="menu" close>
       <summary>【汉化部分】</summary>
