--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ fieldset{
 <h2><font color ="black" ><details class="menu" close>
       <summary>【模拟器下载】</summary>
        <font color="white">
-ONScripter-Jh（全平台）下载：https://bitbucket.org/jh10001/onscripter-jh/downloads/</font></a></div></ul></ul></ul>
-MINE(面包工坊）2020年以来MiNE的持续更新帖：https://tieba.baidu.com/p/6476350812
+ONScripter-Jh（全平台）下载：https://bitbucket.org/jh10001/onscripter-jh/downloads/</div> </li>
+MINE(面包工坊）2020年以来MiNE的持续更新帖：https://tieba.baidu.com/p/6476350812</div> </li>
 
 
 
