--- a/index.html
+++ b/index.html
@@ -864,15 +864,6 @@ fieldset{
 
 <fieldset>
 <font size="6"  color="white">
-自问自答</span></a><br>
-Q：做这个的初衷是什么</span></a><br>
-A：文艺复兴，反正是用爱发电</span></a><br>
-Q：有群吗</span></a><br>
-A：吹水群，偶尔开点车？要加贴吧来找我</span></a><br>
-Q：怎么那么像W大（WARGBM）的主页</span></a><br>
-A：的确是偷W大的主页模板（我永远喜欢W大.jpg）</span></a><br>
-Q：背景出自？</span></a><br>
-A:游戏《ISLAND》（岛厨落泪）
 
 </fieldset>
 
@@ -889,7 +880,7 @@ A:游戏《ISLAND》（岛厨落泪）
 </details></font></h2>
 <hr>
 <font color ="red" >
-最近更新（请到表格&CHM目录查看）：<br>
+最近更新：ONS模拟器资源整理表v3.0<br>
 
 
 <html>
