--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@ fieldset{
 
 <!-- 表格&CHM目录 -->
 
-<h2><font color ="red" ><details class="menu" close>
+<h2><font color ="pink" ><details class="menu" close>
       <summary>【模拟器下载】</summary>
-      <font color="white">
-<ul><div class="chs"><li>ONScripter-Jh（全平台）：https://bitbucket.org/jh10001/onscripter-jh/downloads/</div> </li>
-<ul><div class="chs"><li>MINE(面包工坊）2020年以来MiNE的持续更新帖：https://tieba.baidu.com/p/6476350812</div> </li>
+      <font color="white"> <font size="6" >
+ONScripter-Jh（全平台）：https://bitbucket.org/jh10001/onscripter-jh/downloads/</span></a><br> 
+MINE(面包工坊）2020年以来MiNE的持续更新帖：https://tieba.baidu.com/p/6476350812</span></a><br> 
 
 </details></font></h2>
 <!-- 模拟器下载 -->
