--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ fieldset{
 由于近期环境因素暂时取消除表格外的所有资源链接，恢复期待定</span></a><br>
 由于近期环境因素暂时取消除表格外的所有资源链接，恢复期待定</span></a><br>
 由于近期环境因素暂时取消除表格外的所有资源链接，恢复期待定</span></a><br>
+WDNMD闸总们要我说几遍</span></a><br>
 <font size="6"  color="GhostWhite">
 一、资源详情请见ONS资源整理列表</span></a><br>
 二、新通用解压码：30w包移植_05 </span></a><br>
