--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@ WDNMD闸总们要我说几遍</span></a><br>
 </div> </li>
   
   <div class="b"><a href="https://pan.baidu.com/s/1iupXvxig2_7IxEY1GmZPrg"><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
-  
+	
+  <ul><div class="chs"><li>[07th Expansion] 是谁杀了知更鸟kirikiroid2专版 提取码：6b8r</div> </li>
+    <div class="b"><a href="https://pan.baidu.com/s/1g4AoinmE_vkp6cUBM2TYUg "><font color="#FFFFFF">百度网盘</font></a></div></ul></ul></ul>
+
  
    
     
@@ -881,7 +884,8 @@ fieldset{
 </details></font></h2>
 <hr>
 <font color ="red" >
-最近更新：ONS模拟器资源整理表v3.0<br>
+最近更新：是谁杀了知更鸟kirikiroid2专版 见表格部分<br>
+新域名：https://fx05.herokuapp.com/<br>
 
 
 <html>
